Fix setting z-index for reference images when loading or adding to a document.

BUG:424793